Implement /api/v1/azure/getMemberWorkItems method for getting user work items
