# docs/swagger.yaml
@@ -1,4 +1,13 @@
 definitions:
+  azure.Fields:
+    properties:
+      System.Reason:
+        type: string
+      System.Title:
+        type: string
+      System.WorkItemType:
+        type: string
+    type: object
   azure.Iteration:
     properties:
       attributes:
@@ -83,6 +92,27 @@ definitions:
           $ref: '#/definitions/azure.Team'
         type: array
     type: object
+  azure.WorkItem:
+    properties:
+      fields:
+        $ref: '#/definitions/azure.Fields'
+        type: object
+      id:
+        type: integer
+      rev:
+        type: integer
+      url:
+        type: string
+    type: object
+  azure.WorkItemsResponse:
+    properties:
+      count:
+        type: integer
+      value:
+        items:
+          $ref: '#/definitions/azure.WorkItem'
+        type: array
+    type: object
   httputil.HTTPError:
     properties:
       message:
@@ -115,6 +145,47 @@ info:
   title: Databriz Meetings Api
   version: "0.1"
 paths:
+  /api/v1/azure/getMemberWorkItems/{projectId}/{teamId}:
+    get:
+      parameters:
+      - description: Project Id
+        in: path
+        name: projectId
+        required: true
+        type: string
+      - description: Team Id
+        in: path
+        name: teamId
+        required: true
+        type: string
+      - description: User Id
+        in: query
+        name: userId
+        required: true
+        type: string
+      - description: Iteration Name
+        in: query
+        name: iteration
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/azure.WorkItemsResponse'
+        "400":
+          description: When user has not provided projectId or teamId parameter
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "500":
+          description: When failed to receive data from Azure
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      summary: Задачи определенного участника команды
+      tags:
+      - Azure
   /api/v1/azure/getProjectTeams/{projectId}:
     get:
       description: Возвращает список команд проекта
