# src/models/azure/azureWorkItems.go
@@ -29,3 +29,21 @@ type WorkItems struct {
 	ID int `json:"id"`
 	//URL string `json:"url"`
 }
+
+type WorkItemsResponse struct {
+	Count int        `json:"count"`
+	Value []WorkItem `json:"value"`
+}
+
+type WorkItem struct {
+	ID     int    `json:"id"`
+	Rev    int    `json:"rev"`
+	Fields Fields `json:"fields"`
+	URL    string `json:"url"`
+}
+
+type Fields struct {
+	SystemWorkItemType string `json:"System.WorkItemType"`
+	SystemReason       string `json:"System.Reason"`
+	SystemTitle        string `json:"System.Title"`
+}
